Adicionado visual da tela de pesquisar data da coleta

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.Descarte"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityPesquisarColeta"
+            android:exported="false" />
+        <activity
+            android:name=".PesquisarColeta"
+            android:exported="false"
+            android:theme="@style/Theme.Descarte" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
